# acc_gyro_ekf

./: .gitignore  CMakeLists.txt  main_ekf.cpp  main_ekf_with_eigen.cpp  mylog.h  pangolin_test.cpp  pangolin_test2.cpp  pangolin_test3.cpp  pangolin_test4.cpp  pangolin_test5.cpp  types.h
ekf_filter/: accelerometer_data.h  gyroscope_bias_estimator.cpp  gyroscope_bias_estimator.h  gyroscope_data.h  lowpass_filter.cpp  lowpass_filter.h  matrix_3x3.cpp  matrix_3x3.h  matrix_4x4.cpp  matrix_4x4.h  matrixutils.cpp  mean_filter.cpp  mean_filter.h  median_filter.cpp  median_filter.h  pose_prediction.cpp  pose_prediction.h  pose_state.h  rotation.cpp  rotation.h  sensor_fusion_ekf.cpp  sensor_fusion_ekf.h  vector.h  vectorutils.cpp  vectorutils.h
ekf_filter_eigen/: gyroscope_bias_estimator.cpp  gyroscope_bias_estimator.h  lowpass_filter.cpp  lowpass_filter.h  mean_filter.cpp  mean_filter.h  median_filter.cpp  median_filter.h  pose_prediction.cpp  pose_prediction.h  pose_state.h  sensor_data.h  sensor_fusion_ekf.cpp  sensor_fusion_ekf.h
example/: CMakeLists.txt  coordinate_transformation.cpp
